update long term memory store